--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.username=root
 spring.datasource.password=12345678
 
 mybatis.mapper-locations=classpath:mappers/*.xml
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+
+icode=ABCDE
