商品模块开发

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
 
+#???????????????????
+file.upload.dir=/Users/bytedance/shldev/imooc-mall-prepare-static/
+
 icode=ABCDE
