--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,6 @@ spring.redis.password=
 
 #???????????????????
 file.upload.dir=/Users/bytedance/shldev/imooc-mall-prepare-static/
+file.upload.ip=127.0.0.1
 
 icode=ABCDE
