--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,18 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/resources/lib/anti-piracy.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.imooc</groupId>
+            <artifactId>anti-piracy</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/anti-piracy.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
